--- a/main.tex
+++ b/main.tex
@@ -4,11 +4,8 @@
 
 
 % 1. 作者与日期信息
-\notetitle{Introduction to Algorithm}
+\notetitle{Notes on Introduction to Algorithm}
 \noteauthor{GuoHui}
-\noteschool{Xiamen University}
-\notecollaborator{GuoHui}
-\notecollabschool{Xiamen University}
 \notedate{\today}
 
 % 2. 摘要
@@ -23,8 +20,9 @@
 % 3. 正文
 \begin{document}
 
-    % 3.1. 生成封面 (默认无页码)
+    % 3.1. 生成封面和摘要
     \makenotetitle
+    \makeabstractpage
     
     % 3.2. 生成目录 (设置为无页码)
     \newpage
